# quak

./: .clang-format  .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  README.md  index.md  main.cpp
src/: CMakeLists.txt  android-extras.cpp  android-extras.hpp  main.cpp  native-lib.cpp
src/lib/: CMakeLists.txt
src/lib/src/: buffer.cpp  buffer.hpp  cmd.cpp  cmd.hpp  data_view.cpp  data_view.hpp  event.hpp  file.cpp  file.hpp  gfx.cpp  gfx.hpp  image.cpp  image.hpp  lib.cpp  lib.hpp  log.cpp  log.hpp  platform.cpp  platform.hpp  uri.cpp  uri.hpp  vm.cpp  vm.hpp
src/tests/: buffers.cpp
ts/: internal.ts  lib.quak.core.d.ts  main.ts  package.json  tsconfig.json
ts/internal/: console.ts  window.ts
